炫彩编程助手/Data/DemoMgr/net/Lib/XCGUI.cs


		[DllImport("xcgui.dll", EntryPoint = "XBtn_AddBkBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_AddBkBorder (int hEle,int nState,int color,byte alpha,int width);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_AddBkFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_AddBkFill (int hEle,int nState,int color,byte alpha);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_AddBkImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_AddBkImage (int hEle,int nState,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_GetBkInfoCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XBtn_GetBkInfoCount (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XBtn_ClearBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XBtn_ClearBkInfo (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XComboBox_Create (int x,int y,int cx,int cy,int hParent);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_SetSelItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XComboBox_SetSelItem (int hEle,int iIndex);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_GetButtonRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_GetButtonRect (int hEle,RECT* pRect);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_SetButtonSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_SetButtonSize (int hEle,int size);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_SetDropHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_SetDropHeight (int hEle,int height);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_GetDropHeight", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XComboBox_GetDropHeight (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_BindAdapter", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_BindAdapter (int hEle,int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_GetAdapter", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XComboBox_GetAdapter (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_SetItemTemplateXML", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_SetItemTemplateXML (int hEle,string pXmlFile);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_SetItemTemplateXMLFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_SetItemTemplateXMLFromString (int hEle,string pStringXML);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_EnableDrawButton", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_EnableDrawButton (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_EnableEdit", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_EnableEdit (int hEle,bool bEdit);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_EnableDropHeightFixed", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_EnableDropHeightFixed (int hEle,bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_AddBkBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_AddBkBorder (int hEle,int nState,int color,byte alpha,int width);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_AddBkFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_AddBkFill (int hEle,int nState,int color,byte alpha);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_AddBkImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_AddBkImage (int hEle,int nState,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XComboboX_GetBkInfoCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XComboboX_GetBkInfoCount (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_ClearBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XComboBox_ClearBkInfo (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_GetSelItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XComboBox_GetSelItem (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XComboBox_GetState", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XComboBox_GetState (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XAd_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAd_Destroy (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Create ();

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_AddColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Group_AddColumn (int hAdapter,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_AddItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Group_AddItemText (int hAdapter,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_AddItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Group_AddItemTextEx (int hAdapter,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_AddItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Group_AddItemImage (int hAdapter,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_AddItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Group_AddItemImageEx (int hAdapter,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_SetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Group_SetText (int hAdapter,int iGroup,int iColumn,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_SetTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Group_SetTextEx (int hAdapter,int iGroup,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_SetImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Group_SetImage (int hAdapter,int iGroup,int iColumn,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_SetImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Group_SetImageEx (int hAdapter,int iGroup,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Group_GetCount (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Item_GetCount (int hAdapter,int iGroup);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_AddColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Item_AddColumn (int hAdapter,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_AddItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Item_AddItemText (int hAdapter,int iGroup,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_AddItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Item_AddItemTextEx (int hAdapter,int iGroup,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_AddItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Item_AddItemImage (int hAdapter,int iGroup,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_AddItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Item_AddItemImageEx (int hAdapter,int iGroup,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_SetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Item_SetText (int hAdapter,int iGroup,int iItem,int iColumn,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_SetTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Item_SetTextEx (int hAdapter,int iGroup,int iItem,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_SetImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Item_SetImage (int hAdapter,int iGroup,int iItem,int iColumn,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_SetImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Item_SetImageEx (int hAdapter,int iGroup,int iItem,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_DeleteItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Group_DeleteItem (int hAdapter,int iGroup);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Group_DeleteAllChildItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdListView_Group_DeleteAllChildItem (int hAdapter,int iGroup);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_DeleteItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Item_DeleteItem (int hAdapter,int iGroup,int iItem);
